# porkDyn

./: CLAUDE.md  Cargo.toml  CargoLambda.toml  LICENSE  README.md  renovate.json
.claude/: settings.local.json
.github/workflows/: build.yml  deploy.yml
images/logos/: attribution.txt  porkDynPixelSmall.avif  porkDynPixelSmaller.avif  porkDynWithCrab.avif  porkDynWithCrabLogo3.pdn  porkDynWithCrabLogo4.avif  porkDynWithCrabLogo4.pdn  porkDynWithCrabSmaller.avif
src/: api.rs  credentials.rs  domain.rs  error.rs  http_handler.rs  ip_utils.rs  main.rs
