[package]
name = "pork_dyn"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.15"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "http2",
] }
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"

tokio = { version = "1", features = ["macros"] }
