[package]
name = "pork_dyn"
version = "0.1.0"
edition = "2021"
description = "Dynamic DNS updater for Porkbun.com with IPv4/IPv6 dual-stack support"

[dependencies]
lambda_http = "1.0"
reqwest = { version = "0.13", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"

tokio = { version = "1", features = ["macros"] }
